prevent scrolldown on ios (#2)

--- a/app/css/screen.css
+++ b/app/css/screen.css
@@ -4,6 +4,7 @@ body {
   background-size: cover;
   padding: 0;
   margin: 0;
+  -webkit-overflow-scrolling: touch;
 }
 
 @media (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
